# mini-pos

./: .gitignore  CLAUDE.md  README.md  index.html  main.py  main.spec  mini-pos.py  orders.csv  package-lock.json  package.json  playwright.config.ts  print.py  products.csv  promptpay.py  requirement.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
_internal/: orders.csv  products.csv  promptpay.py
docs/adr/: 0001-hand-written-ipc-types.md
docs/brainstorms/: 2026-05-23-duplicate-rows.html
e2e/: edit-order-itemrow.spec.ts
e2e/fixtures/: itemrow-harness.tsx  itemrow.html
installers/macos/: READ ME FIRST.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fonts/: README.md
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: catalog.rs  config.rs  mod.rs  orders.rs  printer.rs  sync.rs
src-tauri/src/db/: customers.rs  ids.rs  mod.rs  orders.rs  pool.rs  products.rs  sync_ignore.rs
src-tauri/src/db/migrations/: 0001_initial.sql  0002_sync_locked.sql  0003_merge_orders.sql  0004_sync_ignore.sql
src-tauri/src/printer/: mod.rs  network.rs  promptpay.rs  receipt.rs  thai.rs
src-tauri/src/sheets/: auth.rs  client.rs  mod.rs  parser.rs  week.rs
src-tauri/src/sync/: engine.rs  types.rs
src/components/: Cart.tsx  (+11 more)
static/: config.json  orders.csv  products.csv
web/: config_management.html  configuration_management.html  index.html  order_management.html  product_management.html
(+39 files in other folders)
