[package]
name = "grannys-pos"
version = "0.1.0"
edition = "2021"

[lib]
name = "grannys_pos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
escpos = { version = "0.14", features = ["graphics"] }
crc = "3"
ab_glyph = "0.2"
image = "0.25"
