[package]
name = "grannys-pos"
version = "0.1.0"
edition = "2021"

[lib]
name = "grannys_pos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
escpos = { version = "0.14", features = ["graphics"] }
crc = "3"
ab_glyph = "0.2"
image = "0.25"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
cuid2 = "0.1"
thiserror = "1"
async-trait = "0.1"
anyhow = "1"
urlencoding = "2"
